SBVTestSuite/TestSuite/CompileTests/SCase/SCase06.stderr
SCase06.hs:12:14: error: [GHC-39584]
    " sCase: Unknown constructor: FooBar

        Cannot find this constructor in scope.
        Make sure the type is declared and mkSymbolic is called.

    " In the quasi-quotation: [sCase| e of FooBar _ -> 1|]
   |
12 | t e = [sCase| e of FooBar _ -> 1|]
   |              ^^^^^^^^^^^^^^^^^^^^^

